--- a/src/components/Message.module.css
+++ b/src/components/Message.module.css
@@ -5,6 +5,7 @@
   font-family: 'Oswald', sans-serif;
   margin-bottom: 10px;
   flex-direction: column;
+  color: #FFFFFF;
 }
 
 .sentMessage {
